--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ Name:Ramy El Khayat
 ID:500598771 	
 </p>
 
+
+
 This is body
 <h1>This is a heading with the h1 tag</h1>
 <ol>
@@ -40,6 +42,7 @@ This is body
 
 
 </ol>
+<a href="lab1validation.html">Visit for validation report</a>
 <iframe width="640" height="360" src="https://www.youtube.com/embed/J2X5mJ3HDYE?autoplay=1"  allowfullscreen></iframe>
 </body>
 </html>
