--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ This is body
 
 
 </ol>
-<a href="lab1validation.html">Visit for validation report</a>
+<a href="lab1valid.html">Visit for validation report</a>
 <iframe width="640" height="360" src="https://www.youtube.com/embed/J2X5mJ3HDYE?autoplay=1"  allowfullscreen></iframe>
 </body>
 </html>
